Reduce padding to fix overlapping box

--- a/usfl/public/stylesheets/homepage.css
+++ b/usfl/public/stylesheets/homepage.css
@@ -66,7 +66,7 @@ body {
   vertical-align: top;
   height: 100px;
   background: url("http://www.fof-ffl.com/USFL/css/images/grey-box.gif");
-  padding: 10px 26px 17px 8px;
+  padding: 10px 20px 17px 8px;
 }
 
 #center {
